[gd_scene load_steps=2 format=3 uid="uid://vnrnx4wd8cs8"]

[ext_resource type="Script" path="res://scripts/Lobby.gd" id="1_lobby_script"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby_script")

[node name="PlayerListLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -450.0
offset_right = 500.0
offset_bottom = -300.0
grow_vertical = 0
text = "Players Connected:"
autowrap_mode = 2

[node name="ChooseHumanButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -25.0
offset_right = -100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Choose Human"

[node name="ChooseDogButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -25.0
offset_right = 250.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Choose Dog"

[node name="StartGameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 100.0
offset_right = 75.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Game" 